--- a/flows/Dify/dsl/analyze_article_flow_zh_v2.yml
+++ b/flows/Dify/dsl/analyze_article_flow_zh_v2.yml
@@ -1,9 +1,9 @@
 app:
-  description: 利用大语言模型对文章进行总结、摘要，提取关键词、主要观点和文章金句
+  description: 利用大语言模型对文章进行总结、摘要、分类和打标签，提取关键词、主要观点和文章金句，并进行结构化的评分
   icon: sparkle
   icon_background: '#D3F8DF'
   mode: workflow
-  name: BestBlogs 文章分析流程-高
+  name: BestBlogs 文章分析流程-V2
   use_icon_as_answer_icon: false
 kind: app
 version: 0.1.5
@@ -289,32 +289,31 @@ workflow:
           completion_params:
             temperature: 0.7
           mode: chat
-          name: gemini-2.0-flash-exp
-          provider: google
+          name: google/gemini-2.0-flash-exp:free
+          provider: openrouter
         prompt_template:
         - id: 38022a40-3101-4709-9a69-57ddef9e086a
           role: system
           text: "# 技术文章初步分析结果审核专家任务指南\n\n## 背景和目标\n作为资深技术文章分析审核专家，您的任务是审核初步分析结果，确保分析准确反映原文内容，并提供改进建议以提高分析质量。您的审核应确保最终输出具有高度的洞察力和实用性。\n\
             \n## 输入格式\nXML格式，包含：\n1. <metadata>：文章的标题、来源和URL\n2. <content>：原始文章的完整Markdown内容\n\
-            3. <previousAnalysisResult>：初步分析结果，包括一句话总结、摘要、主要观点和文章金句\n4. <previousDomainAndTagResult>：文章领域识别和生成的标签\n\
-            5. <previousScoringResult>：文章的标准化评分\n\n## 审核步骤和重点\n\n1. 一句话总结审核\n   -\
+            3. <previousScoringResult>：文章的标准化评分\n\n## 审核步骤和重点\n\n1. 一句话总结审核\n   -\
             \ 评估是否准确捕捉文章核心内容\n   - 检查是否简洁明了且不遗漏关键信息\n\n2. 摘要审核\n   - 评估是否全面概括文章内容\n\
             \   - 检查是否涵盖关键元素：背景、主题、问题和挑战、思考过程、解决思路、实施措施、方案细节、最终结果\n   - 确保突出关键结论和创新点\n\
             \   - 评估结构和逻辑是否清晰\n   - 检查是否有重要信息遗漏\n\n3. 主要观点和文章金句审核\n   - 验证是否准确反映文章核心论述\n\
             \   - 评估是否涵盖文章最重要的内容和思考\n   - 检查文章金句是否体现最有启发性的思考\n   - 评估排序是否合理反映它们在文章中的重要性\n\
-            \n4. 领域识别和标签审核\n   - 评估领域识别的准确性\n   - 检查标签是否合理覆盖：主题、技术/领域、应用/产品、公司/平台、趋势\n\
-            \   - 评估标签的准确性和完整性\n   - 特别关注AI相关标签的准确性\n   - 检查是否存在不相关或误导性的标签\n   - 评估跨领域内容的标签处理\n\
-            \n5. 评分审核\n   - 检查评分维度的全面性\n   - 评估各维度评分的合理性和依据充分性\n   - 审核加分项和减分项的适当性\n\
-            \   - 确保最终评分准确反映文章的整体质量\n   - 评估评分结果与其他分析部分的一致性\n\n6. 整体一致性检查\n   - 确保各部分分析结果之间相互一致\n\
-            \   - 检查是否存在矛盾或不协调之处\n   - 评估整体分析是否全面、准确地反映了原文内容\n\n## 输出格式\n\n```markdown\n\
-            ### 一句话总结审核\n- 评估结果：[简要描述一句话总结的质量，包括准确性和简洁性]\n- 改进建议：[1-3条具体建议]\n\n###\
-            \ 摘要审核\n- 评估结果：[简要描述摘要的质量，包括全面性、关键元素覆盖、结构逻辑等]\n- 改进建议：[1-3条具体建议]\n\n###\
-            \ 主要观点和文章金句审核\n- 评估结果：[简要描述主要观点和文章金句的质量，包括准确性、全面性、启发性等]\n- 改进建议：[1-3条具体建议]\n\
-            \n### 领域识别和标签审核\n- 评估结果：[简要描述领域识别和标签的质量，包括准确性、相关性、全面性等]\n- 改进建议：[1-3条具体建议]\n\
-            \n### 评分审核\n- 评估结果：[简要描述评分的质量，包括维度全面性、合理性、一致性等]\n- 调整建议：[1-3条具体建议]\n\n\
-            ### 整体一致性\n- 评估结果：[简要描述各部分分析结果之间的一致性]\n- 改进建议：[1-3条具体建议]\n\n### 总体评估\n\
-            - 分析结果主要优点：[1-3点]\n- 分析结果主要改进点：[1-3点]\n- 关键改进建议：[1-3点最重要的建议]\n```\n\n\
-            ## 注意事项\n- 聚焦于评估初步分析结果的质量，而非原文本身\n- 仔细阅读原始文章内容和所有初步分析结果\n- 保持客观、专业的语气\n\
+            \n4. 领域识别和标签审核\n   - 评估领域识别的准确性，文章所属领域可选值：软件编程/人工智能/产品设计/商业科技，人工智能子领域可选值：AI模型/AI开发/AI产品/AI资讯/其他\n\
+            \   - 检查标签是否合理覆盖：主题、技术/领域、应用/产品、公司/平台、趋势\n   - 评估标签的准确性和完整性\n   - 特别关注AI相关标签的准确性\n\
+            \   - 检查是否存在不相关或误导性的标签\n   - 评估跨领域内容的标签处理\n\n5. 评分审核\n   - 检查评分维度的全面性\n\
+            \   - 评估各维度评分的合理性和依据充分性\n   - 审核加分项和减分项的适当性\n   - 确保最终评分准确反映文章的整体质量\n\
+            \   - 评估评分结果与其他分析部分的一致性\n\n6. 整体一致性检查\n   - 确保各部分分析结果之间相互一致\n   - 检查是否存在矛盾或不协调之处\n\
+            \   - 评估整体分析是否全面、准确地反映了原文内容\n\n## 输出格式\n\n```markdown\n### 一句话总结审核\n-\
+            \ 评估结果：[简要描述一句话总结的质量，包括准确性和简洁性]\n- 改进建议：[1-3条具体建议]\n\n### 摘要审核\n- 评估结果：[简要描述摘要的质量，包括全面性、关键元素覆盖、结构逻辑等]\n\
+            - 改进建议：[1-3条具体建议]\n\n### 主要观点和文章金句审核\n- 评估结果：[简要描述主要观点和文章金句的质量，包括准确性、全面性、启发性等]\n\
+            - 改进建议：[1-3条具体建议]\n\n### 领域识别和标签审核\n- 评估结果：[简要描述领域识别和标签的质量，包括准确性、相关性、全面性等]\n\
+            - 改进建议：[1-3条具体建议]\n\n### 评分审核\n- 评估结果：[简要描述评分的质量，包括维度全面性、合理性、一致性等]\n-\
+            \ 调整建议：[1-3条具体建议]\n\n### 整体一致性\n- 评估结果：[简要描述各部分分析结果之间的一致性]\n- 改进建议：[1-3条具体建议]\n\
+            \n### 总体评估\n- 分析结果主要优点：[1-3点]\n- 分析结果主要改进点：[1-3点]\n- 关键改进建议：[1-3点最重要的建议]\n\
+            ```\n\n## 注意事项\n- 聚焦于评估初步分析结果的质量，而非原文本身\n- 仔细阅读原始文章内容和所有初步分析结果\n- 保持客观、专业的语气\n\
             - 提供具体、可操作的改进建议\n- 关注如何提高分析结果的准确性、深度和实用性\n- 考虑分析结果对不同受众（如决策者、研究人员、普通读者）的价值\n\
             - 特别关注AI相关内容的分析准确性\n- 考虑跨领域内容的特殊分析需求\n- 确保审核意见与原文的风格、语气和目标受众相符\n- 在提供改进建议时，考虑实施的可行性和潜在的影响\n\
             - 平衡详细度和简洁性，提供既全面又易于理解的审核报告"
@@ -326,7 +325,7 @@ workflow:
             \  </metadata>\n <content>\n   <![CDATA[\n{{#1719357159255.markdown#}}\n\
             \    ]]>\n  </content>\n  <previousAnalysisResult>\n    <![CDATA[\n  \
             \  {{#1719660406112.text#}}\n    ]]>\n  </previousAnalysisResult>\n</article>"
-        selected: false
+        selected: true
         title: 检查和反思
         type: llm
         variables: []
@@ -428,10 +427,10 @@ workflow:
       height: 126
       id: '1719444170368'
       position:
-        x: 1548.5714285714287
+        x: 1550
         y: 279
       positionAbsolute:
-        x: 1548.5714285714287
+        x: 1550
         y: 279
       selected: false
       sourcePosition: right
@@ -447,8 +446,8 @@ workflow:
           completion_params:
             temperature: 0.7
           mode: chat
-          name: gemini-2.0-flash-thinking-exp-01-21
-          provider: google
+          name: google/gemini-2.0-flash-thinking-exp-1219:free
+          provider: openrouter
         prompt_template:
         - edition_type: basic
           id: 3a219dd6-2439-4a5c-beae-0a3b14961b8b
@@ -463,14 +462,14 @@ workflow:
             \n## Response（响应格式）\n\n### 1. 核心分析输出 (JSON 格式)\n```json\n{\n  \"oneSentenceSummary\"\
             : \"文章一句话核心总结 (50字内)\",\n  \"summary\": \"文章核心内容概要总结 (200-400字)\",\n \
             \ \"domain\": \"文章所属领域 (软件编程/人工智能/产品设计/商业科技)\",\n  \"aiSubcategory\":\
-            \ \"人工智能子领域 (AI模型/AI开发/AI产品/AI资讯，仅当领域为人工智能时)\",\n  \"tags\": [\"文章结构化标签\
-            \ (3-10个，按主题>技术/领域>应用/产品>公司/平台/名人>趋势排序)\"],\n  \"mainPoints\": [\n   \
-            \ {\n      \"point\": \"文章主要观点 (20-40字)\",\n      \"explanation\": \"\
-            观点详细解释和价值/影响 (40-80字)\"\n    }\n  ],\n  \"keyQuotes\": [\"文章代表性金句 (3-5句，原文完整)\"\
-            ],\n  \"score\": \"文章综合评分 (0-100整数)\",\n  \"improvements\": \"文章改进建议 (针对主要不足之处)\"\
-            \n}\n```\n\n#### 1.1 示例一：技术架构文章分析\n\n```json\n{\n  \"oneSentenceSummary\"\
-            : \"详细介绍了基于微服务架构的大规模分布式系统设计方案，包括服务拆分、通信机制和部署策略\",\n  \n  \"summary\":\
-            \ \"文章深入探讨了企业级微服务架构的设计与实现。首先分析了传统单体架构面临的扩展性和维护性问题，然后提出基于DDD的服务拆分方法。接着详细说明了服务间通信机制的选择依据和具体实现方案，包括同步RPC和异步消息队列的应用场景。最后介绍了基于Kubernetes的容器化部署策略和服务网格的治理方案。整体方案在实际项目中取得了良好效果，系统的可扩展性和维护性得到显著提升。\"\
+            \ \"人工智能子领域 (AI模型/AI开发/AI产品/AI资讯/其他，仅当领域为人工智能时，否则为其他)\",\n  \"tags\":\
+            \ [\"文章结构化标签 (3-10个，按主题>技术/领域>应用/产品>公司/平台/名人>趋势排序)\"],\n  \"mainPoints\"\
+            : [\n    {\n      \"point\": \"文章主要观点 (20-40字)\",\n      \"explanation\"\
+            : \"观点详细解释和价值/影响 (40-80字)\"\n    }\n  ],\n  \"keyQuotes\": [\"文章代表性金句\
+            \ (3-5句，原文完整)\"],\n  \"score\": \"文章综合评分 (0-100整数)\",\n  \"improvements\"\
+            : \"文章改进建议 (针对主要不足之处)\"\n}\n```\n\n#### 1.1 示例一：技术架构文章分析\n\n```json\n\
+            {\n  \"oneSentenceSummary\": \"详细介绍了基于微服务架构的大规模分布式系统设计方案，包括服务拆分、通信机制和部署策略\"\
+            ,\n  \n  \"summary\": \"文章深入探讨了企业级微服务架构的设计与实现。首先分析了传统单体架构面临的扩展性和维护性问题，然后提出基于DDD的服务拆分方法。接着详细说明了服务间通信机制的选择依据和具体实现方案，包括同步RPC和异步消息队列的应用场景。最后介绍了基于Kubernetes的容器化部署策略和服务网格的治理方案。整体方案在实际项目中取得了良好效果，系统的可扩展性和维护性得到显著提升。\"\
             ,\n  \n  \"domain\": \"软件编程\",\n  \n  \"tags\": [\n    \"架构设计\",\n   \
             \ \"微服务\",\n    \"分布式系统\",\n    \"Kubernetes\",\n    \"服务网格\",\n    \"\
             DDD\",\n    \"系统优化\"\n  ],\n  \n  \"mainPoints\": [\n    {\n      \"point\"\
@@ -503,12 +502,12 @@ workflow:
             - **受众匹配度：** 内容与目标受众的需求匹配度、专业水平适配性、实践指导性 (10分)\n\n#### 实用性 (20分)\n- **方案可执行性：**\
             \ 方案的可操作性、资源要求的合理性、实施难度的评估 (10分)\n- **实践参考价值：** 经验的借鉴价值、问题解决的效果、应用推广的潜力\
             \ (10分)\n\n#### 创新性 (10分)\n- **观点与方法创新：** 思路的独特性、见解的新颖性、解决方案或技术应用的创新程度\
-            \ (10分)\n\n### 3. 调整分数 (-20到+10分)\n\n#### 加分项 (+1到+10分)\n- **核心亮点：** 独特技术见解、创新应用思路、深刻行业洞察\
-            \ (最高 +3分)\n- **实践价值：**  提供详细实践案例、具体操作指南、完整效果评估 (最高 +3分)\n- **方案完整度：**\
+            \ (10分)\n\n### 3. 调整分数 (-10到+5分)\n\n#### 加分项 (+1到+5分)\n- **核心亮点：** 独特技术见解、创新应用思路、深刻行业洞察\
+            \ (最高 +2分)\n- **实践价值：**  提供详细实践案例、具体操作指南、完整效果评估 (最高 +2分)\n- **方案完整度：**\
             \  方案设计完整、实施步骤清晰 (最高 +2分)\n- **案例支撑度：** 提供真实案例分析、数据支持充分 (最高 +2分)\n\n####\
-            \ 减分项 (-20到0分)\n- **理论研究类：** 生物/医疗AI，3D/机器人/硬件，纯理论论文 (相关性、实用性、目标受众匹配度不足，-5到-15分)\n\
-            - **营销导向类：** 产品推广，公司宣传，营销活动 (技术深度、客观性、实用价值不足，-5到-20分)\n- **内容质量问题：** 技术错误/误导，过度简化概念，缺乏实践支撑，结构混乱\
-            \ (准确性、专业性、可靠性、完整性、清晰度不足，-5到-20分)\n\n### 4. 领域分类体系\n\n#### 软件编程\n- 编程语言\
+            \ 减分项 (-10到0分)\n- **理论研究类：** 生物/医疗AI，3D/机器人/硬件，纯理论论文 (相关性、实用性、目标受众匹配度不足，-3到-5分)\n\
+            - **营销导向类：** 产品推广，公司宣传，营销活动 (技术深度、客观性、实用价值不足，-5到-10分)\n- **内容质量问题：** 技术错误/误导，过度简化概念，缺乏实践支撑，结构混乱\
+            \ (准确性、专业性、可靠性、完整性、清晰度不足，-5到-10分)\n\n### 4. 领域分类体系\n\n#### 软件编程\n- 编程语言\
             \ (前端/后端/跨语言/生态/工具链)\n- 软件架构 (微服务/分布式/DDD/云原生/设计模式/可扩展性)\n- 开发工具 (版本控制/容器化/IDE/调试/自动化/辅助工具)\n\
             - 开源技术 (框架/库/项目贡献/社区/许可)\n- 软件工程 (测试/CI/CD/代码质量/敏捷/协作/技术债务)\n- 技术实践 (流程优化/技术选型/最佳实践/性能/安全/跨平台)\n\
             - 云服务 (公有云/架构设计/云原生/运维/成本优化/混合云)\n\n#### 人工智能\n\n##### AI模型\n- 大语言模型 (架构/原理/训练/微调/评估/部署/应用)\n\
@@ -557,6 +556,6 @@ workflow:
       type: custom
       width: 244
     viewport:
-      x: 16.799999999999955
-      y: 41.89999999999992
+      x: 2.800000000000182
+      y: 35.900000000000006
       zoom: 0.7
